--- a/nopoverty.html
+++ b/nopoverty.html
@@ -102,7 +102,7 @@
                 <div  style="display: grid; grid-template-columns: 90% 10%; padding: 0px;" align="right">
                     <p class="subtitle">ZERO HUNGER</p>
                      <a href="comingsoon.html">
-                        <img class="arrow2" src="IMAGE/arrow.png"> &#20;&#20;</a>
+                        <img class="arrow2" src="image/arrow.png"> &#20;&#20;</a>
                 </div>
                 
             </div>
