--- a/whatisAI.html
+++ b/whatisAI.html
@@ -170,13 +170,13 @@
     
         <div align="center">
             <span>
-                <a href="comingsoon.html"><img class="logo" src="IMAGE/yt.png"></a>
+                <a href="comingsoon.html"><img class="logo" src="image/yt.png"></a>
                 &#20;&#20;&#20;&#20;&#20;
-                <a href="comingsoon.html"><img class="logo" src="IMAGE/fb.png"></a>
+                <a href="comingsoon.html"><img class="logo" src="image/fb.png"></a>
                 &#20;&#20;&#20;&#20;&#20;
-                <a href="comingsoon.html"><img class="logo" src="IMAGE/wb.png"></a>
+                <a href="comingsoon.html"><img class="logo" src="image/wb.png"></a>
                 &#20;&#20;&#20;&#20;&#20;
-                <a href="comingsoon.html"><img class="logo" src="IMAGE/ins.png"></a>
+                <a href="comingsoon.html"><img class="logo" src="image/ins.png"></a>
             </span>
             <p></p>
         </div>
